[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/achievement_popup.gd" id="1_script"]

[node name="AchievementPopup" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -140.0
offset_right = 180.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Banner" type="NinePatchRect" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="BannerLabel" type="Label" parent="Panel/VBox/Banner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "ACHIEVEMENT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "First Blood"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.8, 0.8, 0.85, 1)
text = "Win your first battle"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RewardLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.4, 0.9, 0.4, 1)
text = "+50 Gems"
horizontal_alignment = 1
